Closed Bug 127938 Opened 24 years ago Closed 24 years ago

Can't create folder from 3 pane

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: ezh, Assigned: security-bugs)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Searched thrue bugzilla but couldn't find this bug. 1. Open mail. 2. Crate account. 3. In 3 pane window click right button on a folder and press "New Folder...". 4. Enter name and press OK. 5. Dialog dissapears, but no folder was created. This also happens from File->New->Mew Folder. Same with Subfolders. A way to create a folder is only from filter menu. moz 2002022603 PS It's my first time I use mozilla's mail for mailing from my 3 accounts (I have my main computer killed :( ).
Severity: normal → major
Keywords: nsbeta1, regression
QA Contact: esther → sheelar
Main menu item and context menu, IMAP or POP -- no folder created. Using feb26 commercial trunk.
OS: Windows 2000 → All
Hardware: PC → All
urgent
Cerate folder is working from filter ui, so that is a workaround until 3-pane new folder works.
cc mstoltz, his checkins look suspicious after reading checkin comments. We get this js error JavaScript error: chrome://global/content/dialogOverlay.js line 70: opener has no properties
Blocks: 127932
backing out mstoltz checkins from last night fixes the filter and new folder creation problem in my tree.
I think we back mstoltz out unless we can fix this really quickly. We're in the very late stages of 0.9.9 and we can't ship with this regression.
Blocks: 122050
QA Contact: sheelar → huang
Keywords: nsbeta1nsbeta1+
Priority: -- → P1
Target Milestone: --- → mozilla0.9.9
I'll have a fix by the end of today - If I don't I'll back out.
*** Bug 128095 has been marked as a duplicate of this bug. ***
Reassigning to me, I've got a fix.
Assignee: sspitzer → mstoltz
Attached patch Complete patchSplinter Review
Attachment #71720 - Attachment is obsolete: true
Comment on attachment 71721 [details] [diff] [review] Complete patch sr=jst
Attachment #71721 - Flags: superreview+
Comment on attachment 71721 [details] [diff] [review] Complete patch r=pavlov
Attachment #71721 - Flags: review+
Comment on attachment 71721 [details] [diff] [review] Complete patch a=leaf on behalf of drivers.
Attachment #71721 - Flags: approval+
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 128238 has been marked as a duplicate of this bug. ***
*** Bug 127958 has been marked as a duplicate of this bug. ***
*** Bug 128256 has been marked as a duplicate of this bug. ***
*** Bug 128532 has been marked as a duplicate of this bug. ***
Verified on Windows 05-12-20-pr1 Linux 05-12-23-pr1 Mac 05-12-17-pr1
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: