Bug 127938 - chrome scripts should be exempt from the security check put in for bug 105050, on access to the opener property when the opener is a mail window. r=pavlov, sr=jst, a=leaf.